fixed sidebar collapsed audio indicator

--- a/chrome/EdgyArc-fr/sidebery.css
+++ b/chrome/EdgyArc-fr/sidebery.css
@@ -204,11 +204,13 @@
         /*tab container indicator*/
         .Tab[data-audible="true"] {
             .body {
-                box-shadow: inset 0 0 0.5px 1px rgba(255,80,80,0.7) !important;
-                background: rgba(255,80,80,0.1) !important;   
+                box-shadow: inset 0 0 0.5px 1px rgba(255,80,80,0.4) !important;
+                background: rgba(255,80,80,0.1) !important;  
+                
             }
             &[data-active="true"] .body {
-                background: rgba(255,80,80,0.5) !important;   
+                box-shadow: inset 0 0 0.5px 1px rgba(255,80,80,0.8) !important;
+                background: light-dark(rgba(255,80,80,0.5),rgba(255,100,100,0.3)) !important;   
             }
             
         }
@@ -495,9 +497,10 @@
                /* display:none !important;
                 opacity:0 !important;
                 visibility:collapse !important; */
-                top:-10px !important;
-                left:4px !important;
-                background-color:green !important;
+                top:-8px !important;
+                left:12px !important;
+                width:12px !important;
+                
                 
             }
             
